[package]
name = "rendy-2d"
version = "0.1.0"
authors = ["Matthew McDade <Matthew.McDade13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rendy"
path = "src/rendy.rs"

[[bin]]
name = "rendybin"
path = "src/bin.rs"

[dependencies]
glutin = "0.24"

[build-dependencies]
gl_generator = "0.14"
