[package]
name = "ruckus-2d"
version = "0.1.0"
authors = ["Matthew McDade <Matthew.McDade13@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/MatthewMcDade13/ruckus-2d"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ruckus"
path = "src/ruckus.rs"

# [[bin]]
# name = "ruckusbin"
# path = "src/bin.rs"

[dependencies]
glutin = "0.24"
num = "0.3"
image = "0.23.8"
nalgebra-glm = "0.1"

[build-dependencies]
gl_generator = "0.14"
